# ThalamOS

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE__OF__CONDUCT_8md.html  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE.html  LICENSE_source.html  README.MD  README.de.md  README_8MD.html  SECURITY.md  SECURITY_8md.html  StorageConnector_8py.html  StorageConnector_8py.js  StorageConnector_8py_source.html  Storage__connector_8py.html  Storage__connector_8py.js  Storage__connector_8py_source.html  annotated.html  annotated_dup.js  app_8py.html  app_8py.js  app_8py_source.html  bug.html  classMyLibrary_1_1Example-members.html  classMyLibrary_1_1Example.html  classMyLibrary_1_1SecondExample-members.html  classMyLibrary_1_1SecondExample.html  classMyLibrary_1_1SubclassExample-members.html  classMyLibrary_1_1SubclassExample.html  classes.html  classmodels_1_1StorageItem-members.html  classmodels_1_1StorageItem.html  classmodels_1_1StorageItem.js  classmodels_1_1StorageItemType-members.html  classmodels_1_1StorageItemType.html  classmodels_1_1StorageItemType.js  (+103 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: autopep.yml  docker.yml  doxygen.yml  ghcr.yml  pylint.yml
app/: StorageConnector.py  Storage_connector.py  app.py  config_manager.py  configmanager.py  configmanger.py  dockerfile  logger_config.py  models.py  ollama_manager.py  requirements.txt  storageManager.wsgi  webserver.py  weigh_fi_manager.py  wifiscalemanager.py  wledRequests.py  wled_requests.py  wsgi.py
app/static/: chatbot.js  env.json  logging.js  style.css  weight.js
app/templates/: createItem.html  item.jinja2  search.html
data/: .env.example
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+32 more)
