[project]
name = "ThalamOS"

[tool.poetry]
name = "ThalamOS"
version = "0.2.0"
description = "Light up your storage"
authors = ["PixelWelt"]
license = "MIT"
readme = "README.md"
keywords = ["Storage", "API", "ThalamOS", "WLED", "Flask", "Web", "Python", "self-hosted", "web", "cloud", "management-system"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "3.0.3"
Flask-Cors = "5.0.0"
gunicorn = "23.0.0"
Jinja2 = "3.1.3"
python-dotenv = "1.0.1"
requests = "2.31.0"
urllib3 = "2.2.1"
typing-extensions = ">=4.0.0"
loguru = "0.7.3"
pytest = ">=7.0.0"
langchain-core = ">=0.3.31"
langchain-ollama = ">=0.2.2"
langchain-community = ">=0.3.15"
pandas = ">=2.2.3"

[poetry.group.dev.dependencies]
pre-commit = ">=3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Repository = "https://github.com/PixelWelt/ThalamOS"
Documentation = "https://pixelwelt.github.io/ThalamOS/"
