[project]
name = "ThalamOS"

[tool.poetry]
name = "ThalamOS"
version = "0.2.0"
description = "Light up your storage"
authors = ["PixelWelt"]
license = "MIT"
readme = "README.md"
keywords = ["Storage", "API", "ThalamOS", "WLED", "Flask", "Web", "Python", "self-hosted", "web", "cloud", "management-system"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiohappyeyeballs = "2.4.6"
aiohttp = "3.11.12"
aiosignal = "1.3.2"
annotated-types = "0.7.0"
anyio = "4.8.0"
attrs = "25.1.0"
backoff = "2.2.1"
blinker = "1.9.0"
build = "1.2.2.post1"
CacheControl = "0.14.2"
certifi = "2025.1.31"
charset-normalizer = "3.4.1"
cleo = "2.1.0"
click = "8.1.8"
colorama = "0.4.6"
construct = "2.5.3"
crashtest = "0.4.1"
dataclasses-json = "0.6.7"
distlib = "0.3.9"
distro = "1.9.0"
dulwich = "0.22.7"
fastjsonschema = "2.21.1"
filelock = "3.17.0"
Flask = "3.0.3"
Flask-Cors = "5.0.0"
frozenlist = "1.5.0"
greenlet = "3.1.1"
gunicorn = "23.0.0"
h11 = "0.14.0"
haystack-ai = "2.9.0"
haystack-experimental = "0.5.0"
httpcore = "1.0.7"
httpx = "0.28.1"
httpx-sse = "0.4.0"
idna = "3.10"
iniconfig = "2.0.0"
installer = "0.7.0"
itsdangerous = "2.2.0"
Jinja2 = "3.1.3"
jiter = "0.8.2"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
keyring = "25.6.0"
lazy_imports = "0.4.0"
loguru = "0.7.3"
MarkupSafe = "3.0.2"
marshmallow = "3.26.1"
monotonic = "1.6"
more-itertools = "10.6.0"
msgpack = "1.1.0"
multidict = "6.1.0"
mypy-extensions = "1.0.0"
networkx = "3.4.2"
numpy = "2.2.2"
ollama = "0.4.7"
ollama-haystack = "2.3.0"
openai = "1.61.1"
orjson = "3.10.15"
packaging = "24.2"
pandas = "2.2.3"
pefile = "2024.8.26"
pkginfo = "1.12.0"
platformdirs = "4.3.6"
pluggy = "1.5.0"
poetry = "2.0.1"
poetry-core = "2.0.1"
posthog = "3.11.0"
propcache = "0.2.1"
pydantic = "2.10.6"
pydantic-settings = "2.7.1"
pydantic_core = "2.27.2"
pyproject_hooks = "1.2.0"
pytest = "8.3.4"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-ptrace = "0.9.9"
pytz = "2025.1"
pywin32-ctypes = "0.2.3"
PyYAML = "6.0.2"
RapidFuzz = "3.12.1"
referencing = "0.36.2"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rpds-py = "0.22.3"
shellingham = "1.5.4"
six = "1.17.0"
sniffio = "1.3.1"
SQLAlchemy = "2.0.38"
tenacity = "9.0.0"
tomlkit = "0.13.2"
tqdm = "4.67.1"
trove-classifiers = "2025.1.15.22"
typing-inspect = "0.9.0"
typing_extensions = "4.12.2"
tzdata = "2025.1"
urllib3 = "2.3.0"
virtualenv = "20.29.1"
Werkzeug = "3.1.3"
win32_setctime = "1.2.0"
yarl = "1.18.3"
zstandard = "0.23.0"

[poetry.group.dev.dependencies]
pre-commit = ">=3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Repository = "https://github.com/PixelWelt/ThalamOS"
Documentation = "https://pixelwelt.github.io/ThalamOS/"
